Now we have a dictionary with type and property detections. #3

--- a/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
+++ b/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
@@ -9565,6 +9565,138 @@
     "                \n",
     "dictionary_with_known_data_types_in_a_sentence"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First detection in sentence 35 - length\n",
+      "First detection in sentence 64 - length\n",
+      "First detection in sentence 70 - length\n",
+      "First detection in sentence 76 - length\n",
+      "First detection in sentence 77 - length\n",
+      "First detection in sentence 105 - length\n",
+      "First detection in sentence 106 - length\n",
+      "First detection in sentence 107 - length\n",
+      "First detection in sentence 109 - length\n",
+      "First detection in sentence 112 - length\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(int,\n",
+       "            {35: ['length'],\n",
+       "             64: ['length'],\n",
+       "             70: ['length'],\n",
+       "             76: ['length'],\n",
+       "             77: ['length'],\n",
+       "             105: ['length'],\n",
+       "             106: ['length'],\n",
+       "             107: ['length'],\n",
+       "             109: ['length'],\n",
+       "             112: ['length']})"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create dictionary with findings of known_data_properties_in_line\n",
+    "# The dictionary key is the index number of the line\n",
+    "\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "dictionary_with_known_data_properties_in_a_sentence = defaultdict(int)\n",
+    "\n",
+    "for (word_we_know, index_of_lines_with_a_match) in known_data_properties_in_line:\n",
+    "    \n",
+    "    for index_of_line in index_of_lines_with_a_match:\n",
+    "        \n",
+    "        if index_of_line not in dictionary_with_known_data_properties_in_a_sentence:\n",
+    "            \n",
+    "            print('First detection in sentence ' + str(index_of_line) + \" - \" + word_we_know)\n",
+    "            \n",
+    "            # Add to dictionary\n",
+    "            dictionary_with_known_data_properties_in_a_sentence[index_of_line] = [word_we_know]\n",
+    "            \n",
+    "        else: # a detection in sentence is already added\n",
+    "            \n",
+    "            print('New detection in sentence ' + str(index_of_line) + \" - \" + word_we_know)\n",
+    "            \n",
+    "            # Add if it is a new word\n",
+    "            if word_we_know not in dictionary_with_known_data_properties_in_a_sentence[index_of_line]:\n",
+    "                dictionary_with_known_data_properties_in_a_sentence[index_of_line].append(word_we_know)\n",
+    "                \n",
+    "dictionary_with_known_data_properties_in_a_sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(int,\n",
+       "            {38: (['cm'], 0),\n",
+       "             42: (['cm'], 0),\n",
+       "             44: (['cm'], 0),\n",
+       "             45: (['cm'], 0),\n",
+       "             48: (['cm'], 0),\n",
+       "             49: (['cm'], 0),\n",
+       "             52: (['cm'], 0),\n",
+       "             89: (['cm'], 0),\n",
+       "             76: (['metres'], ['length']),\n",
+       "             105: (['metres', 'v'], ['length']),\n",
+       "             106: (['v'], ['length']),\n",
+       "             107: (['v'], ['length']),\n",
+       "             109: (['v'], ['length']),\n",
+       "             40: (['mm'], 0),\n",
+       "             35: (0, ['length']),\n",
+       "             64: (0, ['length']),\n",
+       "             70: (0, ['length']),\n",
+       "             77: (0, ['length']),\n",
+       "             112: (0, ['length'])})"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Merge dictionary_with_known_data_types_in_a_sentence and dictionary_with_known_data_properties_in_a_sentence\n",
+    "\n",
+    "dictionary_with_known_data_types_and_properties_in_a_sentence = defaultdict(int)\n",
+    "\n",
+    "# Load data type line numbers\n",
+    "for line_number in dictionary_with_known_data_types_in_a_sentence.keys():\n",
+    "    dictionary_with_known_data_types_and_properties_in_a_sentence[line_number] = ([],[])\n",
+    "\n",
+    "# Load data property line numbers\n",
+    "for line_number in dictionary_with_known_data_properties_in_a_sentence.keys():\n",
+    "    dictionary_with_known_data_types_and_properties_in_a_sentence[line_number] = ([],[])\n",
+    "\n",
+    "# Load data\n",
+    "for line_number in dictionary_with_known_data_types_and_properties_in_a_sentence.keys():\n",
+    "    data_types = dictionary_with_known_data_types_in_a_sentence[line_number]\n",
+    "    data_properties = dictionary_with_known_data_properties_in_a_sentence[line_number]    \n",
+    "    dictionary_with_known_data_types_and_properties_in_a_sentence[line_number] = (data_types,data_properties)\n",
+    "\n",
+    "# Result comment: easy to see what we have.\n",
+    "# A human must look at the sentences with 0 values\n",
+    "    \n",
+    "dictionary_with_known_data_types_and_properties_in_a_sentence"
+   ]
   }
  ],
  "metadata": {
