Created dictionary with sentences with findings on both type AND property. #3

--- a/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
+++ b/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
@@ -9697,6 +9697,46 @@
     "    \n",
     "dictionary_with_known_data_types_and_properties_in_a_sentence"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(int,\n",
+       "            {76: (['metres'], ['length']),\n",
+       "             105: (['metres', 'v'], ['length']),\n",
+       "             106: (['v'], ['length']),\n",
+       "             107: (['v'], ['length']),\n",
+       "             109: (['v'], ['length'])})"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Focus on sentences with findings on both type AND property\n",
+    "\n",
+    "dictionary_with_match_on_type_and_property = defaultdict(int)\n",
+    "dictionary_with_match_on_type_or_property = defaultdict(int)\n",
+    "\n",
+    "for line_number in dictionary_with_known_data_types_and_properties_in_a_sentence.keys():\n",
+    "    data_types = dictionary_with_known_data_types_and_properties_in_a_sentence[line_number][0]\n",
+    "    data_properties = dictionary_with_known_data_types_and_properties_in_a_sentence[line_number][1]\n",
+    "    \n",
+    "    if data_types == 0 or data_properties == 0:\n",
+    "        dictionary_with_match_on_type_or_property[line_number] = (data_types,data_properties)\n",
+    "    else:\n",
+    "        dictionary_with_match_on_type_and_property[line_number] = (data_types,data_properties)\n",
+    "\n",
+    "dictionary_with_match_on_type_and_property\n",
+    "#dictionary_with_match_on_type_or_property"
+   ]
   }
  ],
  "metadata": {
