Printing the nouns. #3

--- a/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
+++ b/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
@@ -9674,79 +9674,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1059, 105, 'vessel', 'NNP')\n",
-      "(1071, 105, 'nordic', 'NNP')\n",
-      "(1072, 105, 'boat', 'NNP')\n",
-      "(1073, 105, 'standard', 'NNP')\n"
-     ]
-    }
-   ],
-   "source": [
-    "test = [(1057, 105, 'electrical', 'JJ'),\n",
-    " (1058, 105, 'installation', 'NNS'),\n",
-    " (1059, 105, 'vessel', 'NNP'),\n",
-    " (1061, 105, 'overall', 'JJ'),\n",
-    " (1063, 105, 'construct', 'VBD'),\n",
-    " (1065, 105, 'electrical', 'JJ'),\n",
-    " (1066, 105, 'installation', 'NNS'),\n",
-    " (1069, 105, 'satisfy', 'VB'),\n",
-    " (1070, 105, 'requirement', 'NNS'),\n",
-    " (1071, 105, 'nordic', 'NNP'),\n",
-    " (1072, 105, 'boat', 'NNP'),\n",
-    " (1073, 105, 'standard', 'NNP'),\n",
-    " (1074, 105, 'electrical', 'JJ'),\n",
-    " (1075, 105, 'installation', 'NNS')]\n",
-    "\n",
-    "for (word_index_number,line_index_number,word_in_text,pos) in test:\n",
-    "    if pos.startswith('NNP'):\n",
-    "        print((word_index_number,line_index_number,word_in_text,pos))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1059, 105, 'vessel', 'NNP'),\n",
-       " (1071, 105, 'nordic', 'NNP'),\n",
-       " (1072, 105, 'boat', 'NNP'),\n",
-       " (1073, 105, 'standard', 'NNP')]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test2 = [\n",
-    "    (1059, 105, 'vessel', 'NNP'),\n",
-    "    (1071, 105, 'nordic', 'NNP'),\n",
-    "    (1072, 105, 'boat', 'NNP'),\n",
-    "    (1073, 105, 'standard', 'NNP')\n",
-    "]\n",
-    "\n",
-    "# her ser ein eit mønster 1071 + 1072 + 1073 == nordic boat standard\n",
-    "\n",
-    "# TODO: create CSV with suggestions of things of new things\n",
-    "\n",
-    "# TODO: suggest things we know, that we find, list_of_known_things = ['vessel', 'emergency light', 'pipe system', 'pipe', 'fire extinguisher']\n",
-    "\n",
-    "test2"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
    "outputs": [
@@ -9855,6 +9782,133 @@
     "            sentences_without_data_type_and_data_property.append((word_index_number,line_index_number,word_in_text,pos))\n",
     "\n",
     "sentences_without_data_type_and_data_property"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Find single word suggestions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1059, 105, 'vessel', 'NNP')\n",
+      "(1071, 105, 'nordic', 'NNP')\n",
+      "(1072, 105, 'boat', 'NNP')\n",
+      "(1073, 105, 'standard', 'NNP')\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = [(1057, 105, 'electrical', 'JJ'),\n",
+    " (1058, 105, 'installation', 'NNS'),\n",
+    " (1059, 105, 'vessel', 'NNP'),\n",
+    " (1061, 105, 'overall', 'JJ'),\n",
+    " (1063, 105, 'construct', 'VBD'),\n",
+    " (1065, 105, 'electrical', 'JJ'),\n",
+    " (1066, 105, 'installation', 'NNS'),\n",
+    " (1069, 105, 'satisfy', 'VB'),\n",
+    " (1070, 105, 'requirement', 'NNS'),\n",
+    " (1071, 105, 'nordic', 'NNP'),\n",
+    " (1072, 105, 'boat', 'NNP'),\n",
+    " (1073, 105, 'standard', 'NNP'),\n",
+    " (1074, 105, 'electrical', 'JJ'),\n",
+    " (1075, 105, 'installation', 'NNS')]\n",
+    "\n",
+    "# her ser ein eit mønster 1071 + 1072 + 1073 == nordic boat standard\n",
+    "\n",
+    "# TODO: create CSV with suggestions of things of new things\n",
+    "\n",
+    "# TODO: suggest things we know, that we find, list_of_known_things = ['vessel', 'emergency light', 'pipe system', 'pipe', 'fire extinguisher']\n",
+    "\n",
+    "for (word_index_number,line_index_number,word_in_text,pos) in test:\n",
+    "    if pos.startswith('NNP'):\n",
+    "        print((word_index_number,line_index_number,word_in_text,pos))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(736, 76, 'fire', 'NNP')\n",
+      "(737, 76, 'detection', 'NN')\n",
+      "(738, 76, 'alarm', 'NN')\n",
+      "(739, 76, 'system', 'NN')\n",
+      "(740, 76, 'vessel', 'NNP')\n",
+      "(745, 76, 'year', 'NN')\n",
+      "(746, 76, 'construction', 'NN')\n",
+      "(748, 76, 'detection', 'NN')\n",
+      "(749, 76, 'system', 'NN')\n",
+      "(750, 76, 'fire', 'NN')\n",
+      "(751, 76, 'alarm', 'NN')\n",
+      "(752, 76, 'system', 'NN')\n",
+      "(753, 76, 'machinery', 'NN')\n",
+      "(754, 76, 'space', 'NNS')\n",
+      "(756, 76, 'alarm', 'NN')\n",
+      "(757, 76, 'system', 'NN')\n",
+      "(759, 76, 'accordance', 'NN')\n",
+      "(760, 76, 'appendix', 'NNP')\n",
+      "(1046, 105, 'installation', 'NNS')\n",
+      "(1047, 105, 'vessel', 'NNP')\n",
+      "(1053, 105, 'installation', 'NNS')\n",
+      "(1054, 105, 'voltage', 'NNS')\n",
+      "(1057, 105, 'requirement', 'NNS')\n",
+      "(1058, 105, 'nordic', 'NNP')\n",
+      "(1059, 105, 'boat', 'NNP')\n",
+      "(1060, 105, 'standard', 'NNP')\n",
+      "(1062, 105, 'installation', 'NNS')\n",
+      "(1063, 106, 'vessel', 'NNS')\n",
+      "(1064, 106, 'metre', 'NNS')\n",
+      "(1069, 106, 'installation', 'NNS')\n",
+      "(1070, 106, 'voltage', 'NNS')\n",
+      "(1073, 106, 'rule', 'NNS')\n",
+      "(1075, 106, 'time', 'NN')\n",
+      "(1076, 106, 'construction', 'NN')\n",
+      "(1077, 107, 'vessel', 'NNS')\n",
+      "(1078, 107, 'metre', 'NNS')\n",
+      "(1083, 107, 'installation', 'NNS')\n",
+      "(1084, 107, 'voltage', 'NNS')\n",
+      "(1087, 107, 'requirement', 'NNS')\n",
+      "(1090, 107, 'regulation', 'NNS')\n",
+      "(1095, 109, 'vessel', 'NNS')\n",
+      "(1096, 109, 'metre', 'NNS')\n",
+      "(1101, 109, 'installation', 'NNS')\n",
+      "(1102, 109, 'voltage', 'NNS')\n",
+      "(1105, 109, 'requirement', 'NNS')\n",
+      "(1107, 109, 'regulation', 'NNS')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print the nouns\n",
+    "for line_number in dictionary_with_match_on_type_and_property.keys():\n",
+    "    for (word_index_number,line_index_number,word_in_text,pos) in sentences_without_data_type_and_data_property:\n",
+    "        if line_number == line_index_number and pos.startswith('N'):\n",
+    "            print((word_index_number,line_index_number,word_in_text,pos))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: compare to list of known things and print out to csv\n",
+    "# TODO: do this for 1, 2, 3 and 4 word combinations\n",
+    "# TODO: check words for repeating words and suggest thouse"
    ]
   }
  ],
