Write output for single words to CSV. #3

--- a/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
+++ b/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
@@ -9908,7 +9908,153 @@
    "source": [
     "# TODO: compare to list of known things and print out to csv\n",
     "# TODO: do this for 1, 2, 3 and 4 word combinations\n",
-    "# TODO: check words for repeating words and suggest thouse"
+    "# TODO: check words for repeating words and suggest thouse\n",
+    "# TODO: create fragments of a sentence, and create bi and thrigrams of thouse fragments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(740, 76, 'vessel', 'NNP')\n",
+      "(1047, 105, 'vessel', 'NNP')\n",
+      "(1063, 106, 'vessel', 'NNS')\n",
+      "(1077, 107, 'vessel', 'NNS')\n",
+      "(1095, 109, 'vessel', 'NNS')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Look for words that we know\n",
+    "\n",
+    "for line_number in dictionary_with_match_on_type_and_property.keys():\n",
+    "    for (word_index_number,line_index_number,word_in_text,pos) in sentences_without_data_type_and_data_property:\n",
+    "        if line_number == line_index_number and pos.startswith('N'):\n",
+    "            if word_in_text in list_of_known_things:\n",
+    "                print((word_index_number,line_index_number,word_in_text,pos))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comment on the result:\n",
+    "Are we only alking about \"vessel\" here?\n",
+    "It is the only recognised word in our test vocabulary / ontology\n",
+    "\n",
+    "(740, 76, 'vessel', 'NNP')\n",
+    "(1047, 105, 'vessel', 'NNP')\n",
+    "(1063, 106, 'vessel', 'NNS')\n",
+    "(1077, 107, 'vessel', 'NNS')\n",
+    "(1095, 109, 'vessel', 'NNS')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['vessel,length,metres',\n",
+       " 'vessel,length,metres',\n",
+       " 'vessel,length,v',\n",
+       " 'vessel,length,v',\n",
+       " 'vessel,length,v',\n",
+       " 'vessel,length,v']"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Look for words that we know\n",
+    "\n",
+    "test = []\n",
+    "\n",
+    "for line_number in dictionary_with_match_on_type_and_property.keys():\n",
+    "    for (word_index_number,line_index_number,word_in_text,pos) in sentences_without_data_type_and_data_property:\n",
+    "        if line_number == line_index_number and pos.startswith('N'):\n",
+    "            if word_in_text in list_of_known_things:\n",
+    "                data_types = dictionary_with_match_on_type_and_property[line_number][0]\n",
+    "                data_properties = dictionary_with_match_on_type_and_property[line_number][1]\n",
+    "                \n",
+    "                for data_type in data_types:\n",
+    "                    \n",
+    "                    for data_property in data_properties:\n",
+    "                        \n",
+    "                        test.append(word_in_text + \",\" + data_property + \",\" + data_type)\n",
+    "\n",
+    "test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comment on result\n",
+    "\n",
+    "['vessel,length,metres',\n",
+    " 'vessel,length,metres',\n",
+    " 'vessel,length,v',\n",
+    " 'vessel,length,v',\n",
+    " 'vessel,length,v',\n",
+    " 'vessel,length,v']\n",
+    " \n",
+    " We are only talking about one thing here, and we have a lot of duplicates form the different sentences.\n",
+    " \n",
+    " TODO: Remove duplicates\n",
+    " TODO: Length and voltage do not belong together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('vessel', 'length', 'metres'), ('vessel', 'length', 'v')]"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Removing duplicates and make CSV ready\n",
+    "\n",
+    "output_without_duplicates = list(dict.fromkeys(test))\n",
+    "lines_for_csv_file = []\n",
+    "\n",
+    "for line in output_without_duplicates:\n",
+    "    line_split = line.split(\",\")\n",
+    "    lines_for_csv_file.append((line_split[0],line_split[1],line_split[2]))\n",
+    "\n",
+    "lines_for_csv_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "\n",
+    "with open(\"output - Identify data type properties - Single words.csv\", 'w') as f:\n",
+    "    write = csv.writer(f, delimiter=',', lineterminator='\\n')\n",
+    "    write.writerows(lines_for_csv_file)"
    ]
   }
  ],
