Print sentences with findings, but type OR property is missing. #3

--- a/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
+++ b/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
@@ -9578,7 +9578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -9592,7 +9592,7 @@
        "             109: (['v'], ['length'])})"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9614,6 +9614,58 @@
     "\n",
     "dictionary_with_match_on_type_and_property\n",
     "#dictionary_with_match_on_type_or_property"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(int,\n",
+       "            {38: (['cm'], 0),\n",
+       "             42: (['cm'], 0),\n",
+       "             44: (['cm'], 0),\n",
+       "             45: (['cm'], 0),\n",
+       "             48: (['cm'], 0),\n",
+       "             49: (['cm'], 0),\n",
+       "             52: (['cm'], 0),\n",
+       "             89: (['cm'], 0),\n",
+       "             40: (['mm'], 0),\n",
+       "             35: (0, ['length']),\n",
+       "             64: (0, ['length']),\n",
+       "             70: (0, ['length']),\n",
+       "             77: (0, ['length']),\n",
+       "             112: (0, ['length'])})"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#\n",
+    "# Here we have found sentences with something, but type OR property is missing.\n",
+    "# This is a good place for a human to look for sentences with unknown words.\n",
+    "#\n",
+    "\n",
+    "dictionary_with_match_on_type_and_property = defaultdict(int)\n",
+    "dictionary_with_match_on_type_or_property = defaultdict(int)\n",
+    "\n",
+    "for line_number in dictionary_with_known_data_types_and_properties_in_a_sentence.keys():\n",
+    "    data_types = dictionary_with_known_data_types_and_properties_in_a_sentence[line_number][0]\n",
+    "    data_properties = dictionary_with_known_data_types_and_properties_in_a_sentence[line_number][1]\n",
+    "    \n",
+    "    if data_types == 0 or data_properties == 0:\n",
+    "        dictionary_with_match_on_type_or_property[line_number] = (data_types,data_properties)\n",
+    "    else:\n",
+    "        dictionary_with_match_on_type_and_property[line_number] = (data_types,data_properties)\n",
+    "\n",
+    "#dictionary_with_match_on_type_and_property\n",
+    "dictionary_with_match_on_type_or_property"
    ]
   },
   {
@@ -10011,7 +10063,6 @@
     " \n",
     " We are only talking about one thing here, and we have a lot of duplicates form the different sentences.\n",
     " \n",
-    " TODO: Remove duplicates\n",
     " TODO: Length and voltage do not belong together"
    ]
   },
@@ -10032,7 +10083,7 @@
     }
    ],
    "source": [
-    "# Removing duplicates and make CSV ready\n",
+    "# Removing duplicates from result and make CSV output ready\n",
     "\n",
     "output_without_duplicates = list(dict.fromkeys(test))\n",
     "lines_for_csv_file = []\n",
