Added the data property 'closer'. #3

--- a/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
+++ b/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
@@ -9235,16 +9235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'vessel metre overall length stave inspect approve company month instal'"
+       "'smoke (455) uptake (456) place (457) closer (458) cm (459) insulate (460) bulkhead (461)'"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9257,15 +9257,16 @@
     "sentence = []\n",
     "\n",
     "for (index_on_word,index_on_sentence,word,pos) in word_index_for_lookup:\n",
-    "    if index_on_sentence == 35:\n",
-    "        sentence.append(word)\n",
+    "    if index_on_sentence == 48:\n",
+    "        \n",
+    "        sentence.append(word + \" (\" + str(index_on_word) + \")\")\n",
     "        \n",
     "\" \".join(sentence)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9278,7 +9279,7 @@
     "list_of_known_things = ['vessel', 'emergency light', 'pipe system', 'pipe', 'fire extinguisher']\n",
     "\n",
     "# What are the data properties we know?\n",
-    "list_of_known_data_properties = ['length', 'overall length', 'constructed after', 'constructed before', 'least']\n",
+    "list_of_known_data_properties = ['length', 'overall length', 'closer', 'place closer', 'constructed after', 'constructed before', 'least']\n",
     "\n",
     "# What are the data types we know?\n",
     "list_of_known_data_types = ['cm', 'metre', 'v', 'mm']\n",
@@ -9295,7 +9296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -9307,7 +9308,7 @@
        " ('mm', [40])]"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9340,13 +9341,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('length', [35, 64, 70, 76, 77, 105, 106, 107, 109, 112]),\n",
+       " ('closer', [48, 52]),\n",
        " ('least',\n",
        "  [38,\n",
        "   40,\n",
@@ -9370,7 +9372,7 @@
        "   112])]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9400,7 +9402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -9429,7 +9431,7 @@
        " (112, 'metre')]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9449,7 +9451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -9502,7 +9504,7 @@
        "             40: ['mm']})"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9539,7 +9541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -9556,6 +9558,8 @@
       "First detection in sentence 107 - length\n",
       "First detection in sentence 109 - length\n",
       "First detection in sentence 112 - length\n",
+      "First detection in sentence 48 - closer\n",
+      "First detection in sentence 52 - closer\n",
       "First detection in sentence 38 - least\n",
       "First detection in sentence 40 - least\n",
       "First detection in sentence 41 - least\n",
@@ -9592,6 +9596,8 @@
        "             107: ['length'],\n",
        "             109: ['length'],\n",
        "             112: ['length', 'least'],\n",
+       "             48: ['closer'],\n",
+       "             52: ['closer'],\n",
        "             38: ['least'],\n",
        "             40: ['least'],\n",
        "             41: ['least'],\n",
@@ -9607,7 +9613,7 @@
        "             89: ['least']})"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9644,7 +9650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -9655,9 +9661,9 @@
        "             42: (['cm'], ['least']),\n",
        "             44: (['cm'], ['least']),\n",
        "             45: (['cm'], ['least']),\n",
-       "             48: (['cm'], 0),\n",
+       "             48: (['cm'], ['closer']),\n",
        "             49: (['cm'], ['least']),\n",
-       "             52: (['cm'], 0),\n",
+       "             52: (['cm'], ['closer']),\n",
        "             89: (['cm'], ['least']),\n",
        "             35: (['metre'], ['length']),\n",
        "             64: (['metre'], ['length']),\n",
@@ -9678,7 +9684,7 @@
        "             88: (0, ['least'])})"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9710,7 +9716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -9721,7 +9727,9 @@
        "             42: (['cm'], ['least']),\n",
        "             44: (['cm'], ['least']),\n",
        "             45: (['cm'], ['least']),\n",
+       "             48: (['cm'], ['closer']),\n",
        "             49: (['cm'], ['least']),\n",
+       "             52: (['cm'], ['closer']),\n",
        "             89: (['cm'], ['least']),\n",
        "             35: (['metre'], ['length']),\n",
        "             64: (['metre'], ['length']),\n",
@@ -9734,7 +9742,7 @@
        "             40: (['mm'], ['least'])})"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9760,16 +9768,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "defaultdict(int,\n",
-       "            {48: (['cm'], 0),\n",
-       "             52: (['cm'], 0),\n",
-       "             76: (0, ['length']),\n",
+       "            {76: (0, ['length']),\n",
        "             77: (0, ['length', 'least']),\n",
        "             41: (0, ['least']),\n",
        "             46: (0, ['least']),\n",
@@ -9779,7 +9785,7 @@
        "             88: (0, ['least'])})"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9815,7 +9821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -9837,7 +9843,7 @@
        " (1062, 105, 'installation', 'NNS')]"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9864,7 +9870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -9927,6 +9933,11 @@
        " (437, 45, 'pipe', 'NN'),\n",
        " (438, 45, 'combustible', 'JJ'),\n",
        " (439, 45, 'material', 'NN'),\n",
+       " (455, 48, 'smoke', 'NNP'),\n",
+       " (456, 48, 'uptake', 'NNS'),\n",
+       " (457, 48, 'place', 'VBN'),\n",
+       " (460, 48, 'insulate', 'VBD'),\n",
+       " (461, 48, 'bulkhead', 'NNS'),\n",
        " (462, 49, 'smoke', 'NN'),\n",
        " (463, 49, 'uptake', 'VBP'),\n",
        " (464, 49, 'pipe', 'NN'),\n",
@@ -9942,6 +9953,10 @@
        " (476, 49, 'insulate', 'VBN'),\n",
        " (477, 49, 'bulkhead', 'NN'),\n",
        " (478, 49, 'reduce', 'VBD'),\n",
+       " (495, 52, 'exhaust', 'JJ'),\n",
+       " (496, 52, 'pipe', 'NNS'),\n",
+       " (499, 52, 'combustible', 'JJ'),\n",
+       " (500, 52, 'material', 'NN'),\n",
        " (868, 89, 'cabin', 'NNS'),\n",
        " (870, 89, 'ventilator', 'NNS'),\n",
        " (871, 89, 'diameter', 'VBP'),\n",
@@ -10071,7 +10086,7 @@
        " (380, 40, 'fix', 'VB')]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10109,7 +10124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -10152,7 +10167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -10191,6 +10206,9 @@
       "(436, 45, 'outer', 'NN')\n",
       "(437, 45, 'pipe', 'NN')\n",
       "(439, 45, 'material', 'NN')\n",
+      "(455, 48, 'smoke', 'NNP')\n",
+      "(456, 48, 'uptake', 'NNS')\n",
+      "(461, 48, 'bulkhead', 'NNS')\n",
       "(462, 49, 'smoke', 'NN')\n",
       "(464, 49, 'pipe', 'NN')\n",
       "(466, 49, 'saucer', 'NN')\n",
@@ -10199,6 +10217,8 @@
       "(474, 49, 'thickness', 'NN')\n",
       "(475, 49, 'distance', 'NN')\n",
       "(477, 49, 'bulkhead', 'NN')\n",
+      "(496, 52, 'pipe', 'NNS')\n",
+      "(500, 52, 'material', 'NN')\n",
       "(868, 89, 'cabin', 'NNS')\n",
       "(870, 89, 'ventilator', 'NNS')\n",
       "(318, 35, 'vessel', 'NNS')\n",
@@ -10291,7 +10311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -10302,6 +10322,7 @@
       "(424, 44, 'pipe', 'NNS')\n",
       "(437, 45, 'pipe', 'NN')\n",
       "(464, 49, 'pipe', 'NN')\n",
+      "(496, 52, 'pipe', 'NNS')\n",
       "(318, 35, 'vessel', 'NNS')\n",
       "(628, 64, 'vessel', 'NNP')\n",
       "(672, 70, 'vessel', 'NNP')\n",
@@ -10376,7 +10397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -10386,6 +10407,7 @@
        " 'pipe,least,cm',\n",
        " 'pipe,least,cm',\n",
        " 'pipe,least,cm',\n",
+       " 'pipe,closer,cm',\n",
        " 'vessel,length,metre',\n",
        " 'vessel,length,metre',\n",
        " 'vessel,length,metre',\n",
@@ -10402,7 +10424,7 @@
        " 'pipe,least,mm']"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10484,20 +10506,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('pipe', 'least', 'cm'),\n",
+       " ('pipe', 'closer', 'cm'),\n",
        " ('vessel', 'length', 'metre'),\n",
        " ('vessel', 'length', 'v'),\n",
        " ('vessel', 'least', 'metre'),\n",
        " ('pipe', 'least', 'mm')]"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10517,7 +10540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
